<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/about_title"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_title_1"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_title_2"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_title_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_title_4"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="18dp"
                android:textColor="@color/material_blue_grey_900"
                android:textStyle="bold"
                android:text="@string/about_title_programmer"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_programmer_1"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="3dp"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/about_programmer_2"/>




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/material_blue_grey_900"
                android:text="ما را در شبکه های مجازی دنبال کنید"/>


            <!-- network -->
            <LinearLayout
                android:id="@+id/li_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/img_insta_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_insta" />


                <ImageView
                    android:id="@+id/img_tlg_detail"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_tlg" />

                <ImageView
                    android:id="@+id/img_web_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_web" />


            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

    </ScrollView>

</LinearLayout>
