<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnetwork"
    tools:context=".Activity.NetworkErrorActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:gravity="center"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:srcCompat="@mipmap/ic_could" />

        <TextView
            android:id="@+id/tv_title_network"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/tv_network" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tv_try_wifi_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:text="@string/tv_network_try_wifi" />




            <Button
                android:id="@+id/tv_try_data_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:background="@color/black"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:text="@string/tv_network_try_data" />




        </LinearLayout>




    </LinearLayout>
</android.support.constraint.ConstraintLayout>