<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="75dp"
            android:scaleType="centerCrop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">



                <com.like.LikeButton
                    android:id="@+id/btn_like_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon_size="15dp"
                    app:icon_type="heart" />


                <TextView
                    android:id="@+id/tv_like_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_like_gallery"
                    android:textDirection="rtl"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_title_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_title_gallery"
                    android:textDirection="rtl"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_years_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/str_years_gallery"
                    android:textDirection="rtl"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/btn_desc_gallery"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@android:drawable/ic_dialog_info"
                    android:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_marginTop="3dp"
                    android:text="@string/str_more_gallery"
                    android:textDirection="rtl"
                    android:textSize="12dp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>
