<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:MContext=".screens.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_app_bar_height">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleTextAppearance="@style/InvisibleTitle"
            app:collapsedTitleTextAppearance="@style/WhiteTitle"
            app:contentScrim="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                android:src="@drawable/surfer" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginRight="50dp"
                app:titleTextColor="@color/white"
                app:title="@string/app_name"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="@dimen/main_overlap_top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_double_cardview_container_height"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_ar_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_layout_margin_quartered"
                    android:layout_marginStart="@dimen/default_layout_margin"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/weather2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview_weather_background"
                        android:orientation="vertical"
                        android:padding="@dimen/default_layout_margin_halved"
                        android:weightSum="2">

                        <!--<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="28˚"
                            android:textAppearance="@style/TemperatureTextStyle"
                            android:textSize="@dimen/textsize_huge"
                            android:textStyle="bold" />-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="0.5"
                            android:text="@string/txt_title_map_home"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="17dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/txt_desc_map_home"
                            android:textColor="@color/dark_yellow"
                            android:layout_gravity="center"
                            android:textSize="12dp" />



                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_vr_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_layout_margin"
                    android:layout_marginStart="@dimen/default_layout_margin_quartered"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/weather"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview_weather_background"
                        android:orientation="vertical"
                        android:padding="@dimen/default_layout_margin_halved"
                        android:weightSum="2">

                        <!--<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="28˚"
                            android:textAppearance="@style/TemperatureTextStyle"
                            android:textSize="@dimen/textsize_huge"
                            android:textStyle="bold" />-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="0.5"
                            android:text="@string/txt_title_point_home"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="17dp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/txt_desc_point_home"
                            android:textColor="@color/dark_yellow"
                            android:layout_gravity="center"
                            android:textSize="11dp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/default_layout_margin"
                android:layout_height="150dp"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_ar_street_home"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/main_cardview_trip_height"
                    android:layout_margin="@dimen/default_layout_margin">

                    <LinearLayout
                        android:id="@+id/nextTrip"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview_trip_background"
                        android:orientation="vertical">

                      <!--  <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/trip_starts_in_2_days"
                            android:padding="@dimen/default_layout_margin_halved"
                            android:textStyle="bold"
                            android:textSize="@dimen/textsize_very_small"/>-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="روی تصاویر نصب شده در شهر اسکن کنید"
                            android:layout_gravity="center_vertical"
                            android:gravity="left|bottom"
                            android:paddingLeft="@dimen/default_layout_margin_halved"
                            android:paddingRight="@dimen/default_layout_margin_halved"
                            android:textSize="10dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/white"
                            android:text="موزه خیابانی واقعیت افزوده"
                            android:layout_gravity="center_vertical"
                            android:gravity="left"
                            android:paddingLeft="@dimen/default_layout_margin_halved"
                            android:paddingRight="@dimen/default_layout_margin_halved"
                            android:textSize="@dimen/textsize_very_big"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:id="@+id/textView" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/button_red"
                            android:textColor="@color/white"
                            android:text="برای اولین بار در کشور"
                            android:textSize="@dimen/textsize_very_small"
                            android:textStyle="bold"
                            android:paddingLeft="@dimen/default_layout_margin_halved"
                            android:paddingRight="@dimen/default_layout_margin_halved"
                            android:gravity="center"
                            android:drawableLeft="@drawable/drawable_arrow_right_up"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <com.github.florent37.diagonallayout.DiagonalLayout
                    android:id="@+id/photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="@dimen/default_layout_margin"
                    android:elevation="4dp"
                    android:rotation="90"
                    app:diagonal_angle="30"
                    app:diagonal_gravity="bottom">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:rotation="-90"
                        android:scaleType="matrix"
                        android:src="@drawable/monkey_forest_1" />

                </com.github.florent37.diagonallayout.DiagonalLayout>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
